fixed overlapping divs on clicks

--- a/firstfaces/firstfaces/face/static/face/css/groupData.css
+++ b/firstfaces/firstfaces/face/static/face/css/groupData.css
@@ -240,6 +240,7 @@
     width: 2000%;
     border: 2px solid blue;
     background-color: white;
+    z-index: 200;
 
 }
 
